# StreamBase

./: .gitignore  CMakeLists.txt  LICENSE  README.md
client/: main.cpp
client/screens/: connect_screen.cpp  connect_screen.h  home_screen.cpp  home_screen.h  read_stored_data_screen.cpp  read_stored_data_screen.h  screen_data.cpp  screen_data.h  screen_factory.cpp  screen_factory.h  screen_interface.h  store_classes_screen.cpp  store_classes_screen.h  store_data_screen.cpp  store_data_screen.h
server/: config.cpp  config.h  main.cpp  named_pipe_server.cpp  named_pipe_server.h  server.cpp  server.h  windows_helper.cpp
server/commands/: command_factory.cpp  command_factory.h  command_interface.h  execute_method_command.cpp  execute_method_command.h  list_classes_command.cpp  list_classes_command.h  list_params_command.cpp  list_params_command.h  read_stored_command.cpp  read_stored_command.h  store_class_command.cpp  store_class_command.h  store_command.cpp  store_command.h
server/custom_classes/: custom_class_factory.cpp  custom_class_factory.h  custom_class_interface.h  custom_class_runner.cpp  custom_class_runner.h
server/data_objects/: data_object_interface.h  storage_data.cpp  storage_data.h  stored_class_data.cpp  stored_class_data.h
shared/: comm.h  config.cpp  config.h  named_pipe_io.cpp  named_pipe_io.h  windows_helper.cpp  windows_helper.h
